Update to Java 21, introduce CancellableFork